docs/assets/less/overrides.less
@import (reference) '../../../lib/build/less/variables/colors';
@import (reference) '../../../lib/build/less/variables/typography';
@import (reference) '../../../lib/build/less/variables/spacing';
@import (reference) '../../../lib/build/less/utilities/internals';
@import (reference) '../../../lib/build/less/utilities/spacing';
@import (reference) '../../../lib/build/less/utilities/typography';

html {
  scroll-behavior: smooth;
}

body {
  --sidebar-width: 23.3rem !important;
  --sidebar-width-mobile: var(--sidebar-width);
}

:root {
  --c-brand: @purple-500;
  --navbar-height: 6.4rem;
}

.page {
  padding-top: var(--navbar-height);
  padding-left: var(--sidebar-width);

  @media screen and (max-width: 980px) {
    padding: var(--su114) 0 0 !important;
  }
  @media screen and (min-width: 981px) {
    outline-offset: -24px;
  }
  @media screen and (min-width: 1264px) {
    outline-offset: -24px;
  }
}

code,
kbd,
samp {
  font-family: RobotoMono,SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
}

.sidebar-item.active {
  border-left-color: transparent !important;
}

.sidebar-item:not(.sidebar-heading) + .sidebar-item-children {
  padding-left: var(--su8);
  .sidebar-item-children {
    display: none;
  }
}

.sidebar {
  @media screen and (min-width: 981px) {
    padding-left: var(--su8);
  }

  border-right: 0;
  scrollbar-color: var(--black-200);

  &::-webkit-scrollbar-thumb {
    background-color: var(--black-200);
    border-radius: var(--br-pill);
  }

  &::-webkit-scrollbar-thumb:hover {
    background-color: var(--black-400);
  }
}

.sidebar-heading,
.sidebar-item {
  @media screen and (min-width: 981px) {
    font-size: var(--fs16) !important;
  }
}

.sidebar-heading {
  @media screen and (min-width: 981px) {
    font-size: var(--fs14) !important;
    text-transform: uppercase;
  }
}

.sidebar-item {
  &:not(.sidebar-heading) {
    @media screen and (min-width: 981px) {
      padding-left: 1.3rem;
      font-size: var(--base--font-size);
    }
  }
  .sidebar-item-children .sidebar-item-children &:not(.sidebar-heading) {
    @media screen and (min-width: 981px) {
      padding-left: 1.3rem;
    }
  }
}

.sidebar-item-children {
  margin-bottom: var(--su8) !important;
}

.theme-default-content:not(.custom)>div:not([class]), .theme-default-content:not(.custom) {

  @media screen and (min-width: 1264px) {
    max-width: 99rem; // magic number
  }

  // override to underline if class attribute doesn't exist OR if class attribute has no value
  a[class=""],
  a:not([class]) {
    text-decoration: underline;
    &:hover {
      color: var(--primary-color-hover);
      text-decoration: none;
    }
  }

  > h2 {
    font-size: var(--fs24);
  }

  > h2,
  > h3 {
    margin-top: calc(0.5rem - var(--navbar-height) + var(--su48));
    padding-top: calc(1rem + var(--navbar-height));
    font-weight: var(--fw-bold);
  }

  > ol,
  > ul {
    .d-stack8();
  }

  > p,
  > ol,
  > ul {
    max-width: 72ch;
    margin-top: var(--su16);
    padding-left: revert;
  }

  > ul,
  > ol {
    padding-left: 1.5em;
    > li > ul,
    > li > ol {
      margin-top: var(--su8);
    }
  }

  > ol > * + * {
    margin-top: 0!important;
  }

}

.page-nav {
  margin: 0 auto;
  max-width: 99rem;
  .inner {
    border: 0;
    display: flex;
    justify-content: space-between;
    margin-bottom: var(--su72);
  }
  .prev,
  .next {
    display: flex;
    gap: var(--su12);

    a {
      color: var(--black-500);
      font-size: var(--fs16);
      background-color: var(--black-025);
      padding: var(--su16) var(--su24);
      border-radius: var(--br8);
      @media screen and (min-width: 981px) {
        font-size: var(--fs24);
      }
      &:hover {
        color: var(--black-900);
      }
      &:active {
        background-color: var(--black-050);
      }
    }

  }
  .prev {
    a:before {
      margin-right: var(--su4);
    }
  }
  .next {
    a:after {
      margin-left: var(--su4);
    }
  }
}

.page-meta {
  font-size: var(--fs14);
  & {
    margin: 0 auto;
    max-width: 99rem;
  }
}

